Agregando contenido a user

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       <div class="sidebar-wrapper">
         <ul class="nav">
           <li class="nav-item active  ">
-            <a class="nav-link" href="#0">
+            <a class="nav-link" href="#">
               <i class="material-icons">dashboard</i>
               <p>Inicio</p>
             </a>
           </li>
 
           <li class="nav-item ">
-            <a class="nav-link" href="views/user.html">
+            <a class="nav-link" href="../bootstrap_template/views/user.html">
               <i class="material-icons">people</i>
               <p>Perfil del Usuario</p>
             </a>
