--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
             </a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="../bootstrap_template/views/estadisticas.html">
+              <i class="material-icons">assessment</i>
+              <p>Estadisticas</p>
+            </a>
+          </li>
+
           <!-- your sidebar here -->
         </ul>
       </div>
