--- a/examples/dashboard.html
+++ b/examples/dashboard.html
@@ -169,7 +169,10 @@ The above copyright notice and this permission notice shall be included in all c
       <!-- End Navbar -->
       <div class="content">
         <div class="container-fluid">
+
+          <!--Estas son las tarjetas-->
           <div class="row">
+
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
                 <div class="card-header card-header-warning card-header-icon">
@@ -189,6 +192,7 @@ The above copyright notice and this permission notice shall be included in all c
                 </div>
               </div>
             </div>
+
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
                 <div class="card-header card-header-success card-header-icon">
@@ -205,6 +209,7 @@ The above copyright notice and this permission notice shall be included in all c
                 </div>
               </div>
             </div>
+
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
                 <div class="card-header card-header-danger card-header-icon">
@@ -221,6 +226,7 @@ The above copyright notice and this permission notice shall be included in all c
                 </div>
               </div>
             </div>
+
             <div class="col-lg-3 col-md-6 col-sm-6">
               <div class="card card-stats">
                 <div class="card-header card-header-info card-header-icon">
@@ -237,7 +243,10 @@ The above copyright notice and this permission notice shall be included in all c
                 </div>
               </div>
             </div>
+
           </div>
+
+
           <div class="row">
             <div class="col-md-4">
               <div class="card card-chart">
@@ -289,6 +298,7 @@ The above copyright notice and this permission notice shall be included in all c
               </div>
             </div>
           </div>
+          
           <div class="row">
             <div class="col-lg-6 col-md-12">
               <div class="card">
@@ -580,6 +590,7 @@ The above copyright notice and this permission notice shall be included in all c
               </div>
             </div>
           </div>
+
         </div>
       </div>
       <footer class="footer">
